# dioxus-wasm-poc

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  deploy.sh
docs/: index.html
docs/assets/: hot_dog-da722ee3b102254c.js  hot_dog-da722ee3b102254c.js.br  hot_dog_bg-3a42ed648b44ed2e.wasm  hot_dog_bg-3a42ed648b44ed2e.wasm.br  main-9164ebf1307a8ea9.css.br
docs/public/: index.html
docs/public/assets/: hot_dog-d5c535a14a31eb21.js  hot_dog-d5c535a14a31eb21.js.br  hot_dog_bg-7f61383a7bf52d17.wasm  hot_dog_bg-7f61383a7bf52d17.wasm.br  main-9164ebf1307a8ea9.css
src/: backend.rs  main.rs
src/components/: favorites.rs  mod.rs  nav.rs  router.rs  view.rs
